Rename service name to `uzng-service-status`
